@@ -289,6 +289,12 @@ static SoupConnection *
 soup_try_existing_connections (SoupContext *ctx)
 {
 	GSList *conns = ctx->server->connections;
+
+
+	/* FIXME FIXME FIXME: This stuff isn't working quite right yet.
+	   It sometimes throws errors when a connection gets HUP'ed, so
+	   we'll just disable it for now.*/
+	return NULL;
 	
 	while (conns) {
 		SoupConnection *conn = conns->data;
